package common

enum class CellStatus {
    EMPTY,      // пустая вода, еще не стреляли
    SHIP,       // здесь стоит корабль, но он еще цел
    HIT,        // попадание в корабль
    MISS,       // промах (выстрел в пустую клетку)
    BORDER      // зона вокруг корабля, где нельзя ставить другие
}