@startuml
'https://plantuml.com/class-diagram

class Coordinate <<datatype>> {
  +x: Char
  +y: Int
  +isValid(): Boolean
  +getNeighbors(): List<Coordinate>
  {static} +parse(line: String): Coordinate?
}

enum Result {
    VALID,
    INVALID,
    GAME_OVER,
    WIN
}

enum CellStatus {
    EMPTY,
    SHIP,
    HIT,
    MISS,
    BORDER
}

package screens {
    class LoginViewModel {
        -gameManager: GameManager
        +onPlayer1NameChange(name: String)
        +onPlayer2NameChange(name: String)
        +onStartGame()
    }
    class CombatViewModel {
        -gameManager: GameManager
        +onCellClicked(playerIndex: Int, x: Int, y: Int)
        -syncStateWithEngine()
    }
    class GameResultViewModel {
        -gameManager: GameManager
        +onBackToMenu()
    }
    class MatchReplayViewModel {
        -gameManager: GameManager
        +nextStep()
        +prevStep()
        -rebuildBoards()
    }
    class LeaderboardViewModel {
        -gameManager: GameManager
        +loadLeaderboard()
    }
    class SetupViewModel {
        -gameManager: GameManager
        +onShipTypeSelected(type: ShipType)
        +onRotateShip()
        +onCellClicked(x: Int, y: Int)
        +onNextPlayerClicked(): Boolean
    }
    class SpecialShipPickerViewModel {
        +onShapeSelected(shape: SpecialShape)
    }
    class ShipSelectionViewModel {
        -gameManager: GameManager
        +onSpecialShapeSelected(playerName: String, shape: SpecialShape)
    }
    class PlayerStatsViewModel {
        -gameManager: GameManager
        +searchPlayer(name: String)
    }
}

package repository {
    interface History {
        +saveMatch(p1: String, p2: String, winner: String, log: List<Pair>)
        +getMatchReplay(matchId: Int): List<Pair>?
        +getMatchSummary(matchId: Int): MatchSummary?
    }
    interface Statistics {
        +getPlayerStats(playerName: String): PlayerStats?
        +getTopPlayers(limit: Int): List<PlayerStats>
        +saveMatchResult(playerName: String, isWin: Boolean)
        +createPlayer(playerName: String)
    }
}

package DAO {
    package AndroidDAO {
        interface HistoryDao {
            +insertMatch(match: MatchEntity): Long
            +insertMove(move: MoveEntity)
            +insertMoves(moves: List<MoveEntity>)
            +saveMatchWithMoves(match: MatchEntity, moves: List<MoveEntity>)
            +getMovesByMatchId(matchId: Int): List<MoveEntity>
            +getMatchById(matchId: Int): MatchEntity?
        }
        interface PlayerDao {
            +getPlayerByName(playerName: String): PlayerEntity?
            +getTopPlayers(limit: Int): List<PlayerEntity>
            +insertPlayer(player: PlayerEntity)
            +incrementWins(playerName: String)
            +incrementLosses(playerName: String)
        }
    }
    package DesktopDAO {
        interface HistoryDao {
            +insertMatch(connection: Connection, p1: String, p2: String, winner: String): Int
            +insertMove(connection: Connection, matchId: Int, turn: Int, action: String, coords: String, result: String, shipType: String?)
            +getMoves(matchId: Int): List<MoveEntity>
            +getMatch(matchId: Int): MatchEntity?
        }
        interface PlayerDao {
            +getPlayerByName(name: String): PlayerEntity?
            +getTopPlayers(limit: Int): List<PlayerEntity>
            +createPlayer(name: String)
            +updateStats(name: String, isWin: Boolean)
        }
    }
}


class GameManager {
    +getMyBoardStatusGrid(): List<List<CellStatus>>
    +getEnemyBoardStatusGrid(): List<List<CellStatus>>
    +getMatchSummary(matchId: Int): MatchSummary?
}

interface PlayerManager {
    +loginPlayer(playerName: String): ManagerResult
    +getPlayerStats(name: String): PlayerStats?
    +getLeaderboard(): List<PlayerStats>
    +getPlayer1Name(): String?
    +getPlayer2Name(): String?
    +getCurrentPlayerName(): String
}

interface MatchManager {
    +startMatch(): ManagerResult
    +startGame(): MoveResult.Error?
    +abortMatch()
    +handleMove(action: Move): MoveResult
    +switchTurn()
    +setSpecialShip(playerName: String, shape: SpecialShape)
    +getSpecialShip(playerName: String): SpecialShape?
    +getMatchHistory(id: Int): List<Pair<Move, MoveResult>>?
}

interface ViewManager {
    +getPlayer1Board(): List<List<CellStatus>>
    +getPlayer2Board(): List<List<CellStatus>>
    +getPlayer1ViewOfEnemy(): List<List<CellStatus>>
    +getPlayer2ViewOfEnemy(): List<List<CellStatus>>
    +getPlayer1Ships(): List<Ship>
    +getPlayer2Ships(): List<Ship>
}

class Game {
    +player1: Player
    +player2: Player
    +move(action: Move) : MoveResult
    +getWinner(): TurnOwner?
    +getHistory(): List<Pair<Move, MoveResult>>
    +getCurrentTurnOwner(): TurnOwner
    +startGame(): MoveResult.Error?
    +switchTurn()
}

class Board {
    -cells: MutableMap<Coordinate, CellStatus>
    -ships: MutableList<Ship>
    +getCellStatus(coordinate: Coordinate): CellStatus
    +updateCellStatus(coordinate: Coordinate, newStatus: CellStatus): Unit
    +getSnapshot(): Map<Coordinate, CellStatus>
    +hasShip(coordinate: Coordinate): Boolean
    +addShip(ship: Ship)
    +getShipAt(coordinate: Coordinate): Ship?
    +hasAliveShips(): Boolean
    +getShips(): List<Ship>
}

class Player {
    +name: String
    +radarCharges: Int
    +bomberCharges: Int
    +myBoard: Board
    +ships: List<Ship>
    +useRadar(): Boolean
    +useBomber(): Boolean
}

class EnemyBoardEngine {
    +process(action: Move, board: Board): MoveResult
}

class scan {
    -isValidScan(coordinates: List<Coordinate>, enemyBoard: Board): Boolean
    +scan(coordinates: List<Coordinate>, enemyBoard: Board) : MoveResult
}

class Attack {
    +handle(action: Move, board: Board): MoveResult
    -isCellUntouched(coordinate: Coordinate, board: Board): Boolean
    -isValidAttack(action: Move, board: Board): Boolean
    +getCoordinatesAroundSunkShip(ship: Ship, board: Board): Set<Coordinate>
    -singleAttack(coordinate: Coordinate, board: Board): MoveResult
    -bomberAttack(coordinates: List<Coordinate>, board: Board): MoveResult
}

class MyBoardEngine {
    +process(action: Move, myBoard: Board): MoveResult
    +installShip(coordinates: List<Coordinate>): Boolean
    +isValidMyBoardEngine(coordinate: Coordinate, myBoard: Board): Boolean
}

abstract class Ship {
    +coordinates: List<Coordinate>
    +type: ShipType
    +shape: SpecialShape?
    +receiveHit(coordinate: Coordinate)
    +isSunk(): Boolean
}

class Destroyer
class Cruiser
class Submarine
class Carrier
class BattleWagon
class SpecialShip

abstract class Move <<sealed>>

class Install <<datatype>> {
    +ship: Ship
    +coordinates: List<Coordinate>
}
class SingleAttack <<datatype>> {
    +coordinate: Coordinate
}
class GrandAttack <<datatype>> {
    +coordinate: Coordinate
}
class Radar <<datatype>> {
    +coordinate: Coordinate
}

' --- MoveResult (Isolate) ---
abstract class MoveResult <<sealed>> {
}

class ShipInstall {
    +shipCoordinates: List<Coordinate>
    +borderCoordinates: Set<Coordinate>
    +shipType: ShipType?
}

class ScanResult {
    +info: Map<Coordinate, CellStatus>
}

class GrandResult {
    +results: List<Success>
}

abstract class Success {
    +coordinate: Coordinate
}

class Miss
class Hit
class Sunk {
    +affectedCoordinates: Set<Coordinate>
    +shipType: ShipType?
}
class Over {
    +affectedCoordinates: Set<Coordinate>
    +shipType: ShipType?
}

abstract class Error {
    +reason: String
}
class GameError
class InvalidMove

MoveResult <|-- ShipInstall
MoveResult <|-- ScanResult
MoveResult <|-- GrandResult
MoveResult <|-- Success
MoveResult <|-- Error

Success <|-- Miss
Success <|-- Hit
Success <|-- Sunk
Success <|-- Over

Error <|-- GameError
Error <|-- InvalidMove
' --------------------------

Move <|-- Install
Move <|-- SingleAttack
Move <|-- GrandAttack
Move <|-- Radar

Ship <|-- Destroyer
Ship <|-- Cruiser
Ship <|-- Submarine
Ship <|-- Carrier
Ship <|-- BattleWagon
Ship <|-- SpecialShip

Game *-- Player : владеет
Player *-- Board : содержит
Board o-- Ship

Game o-- EnemyBoardEngine
Game o-- MyBoardEngine

EnemyBoardEngine ..> scan : использует
EnemyBoardEngine ..> Attack : использует
Attack ..> Board : меняет состояние Map
Attack ..> Ship : вызывает receiveHit
MyBoardEngine ..> Ship : размещает

CellStatus <.. Board

PlayerManager <|.. GameManager
MatchManager <|.. GameManager
ViewManager <|.. GameManager

GameManager *-- Game
screens o-- GameManager

GameManager o-- repository
repository *-- DAO

@enduml
